tests/pass/return_ref.tk
import std/io::println
fn get_ref(x:i32) -> &i32 <- x {
    return &x
}

fn bigger(x:i32, y:i32) -> &i32 <- x|y {
    if (x > y) {
        return &x
    }
    return &y
}

shape RefInt <- val
(
    &val : i32
)

fn main() -> i32 {
    auto y = 10
    auto &ref = get_ref(y)
    println("Ref: {}", ref)
    auto z = 20
    auto &big = bigger(y, z)
    println("Big: {}", big)

    auto a = 11
    auto ref_a = RefInt(&val=&a)
    println("RefA: {}", ref_a.val)
   
    return 0
}
    
